# fa.intelligence.notebooks

./: .gitignore  README.md  components_examples.ipynb  setup.cfg  setup.py
.docs/: support_contribute.md
.github/workflows/: package_components_workflow.yml
.old/configuration/: library_versions_check.py
books/python_for_mere_motrals/: section_1.ipynb  section_2.ipynb  section_3.ipynb
components/data_access/: easy_equities_data_access.py  html_data_access.py  yahoo_finance_data_access.py
components/engines/: valuation_engine.py
configuration/: mount_azure_datalake_storage.py
data/: DOGE_BTC-1h.json
environments/: README.md
environments/conda/: README.md  pytorch_env.yml  tensorflow-apple-silicon.yml  tensorflow-cuda.yml  tensorflow-gpu.yml
environments/scripts/: check_versions.ipynb
examples/: components_examples.ipynb
examples/data_access/: notifications_data_access.telegram.ipynb  personal_asset_data_access.easy_equities.ipynb  public_asset_data_access.yahoo_finance.ipynb  resources_data_access.embedded.ipynb  resources_data_access.html.ipynb
frostaura/: README.md  setup.cfg
frostaura/data_access/: public_asset_data_access.py  public_asset_data_access__yahoo_finance.py
frostaura/engines/: __init__.py  asset_calculations_engine__simple.py  asset_projection_engine.py  asset_projection_engine__simple.py  asset_valuation_engine.py  asset_valuation_engine__finviz.py  asset_valuation_engine__graham.py
frostaura/managers/: asset_reporting_manager__personal.py
frostaura/resources/: easy_equities_us_exclusions.json
src/: setup.py
(+125 files in other folders)
