[metadata]
name = frostaura
version = 1.0.1
author = Dean Martin
description = FrostAura provides a range of open-source components provide a variety of problem domains.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faGH/fa.intelligence.notebooks
keywords = frostaura, deeplearning, machinelearning, marketanalysis, assets, bots, visualization, data
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
include_package_data = True
packages = find: